[package]
name = "link-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.21.0"
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.115"
clap = { version = "3.2", features = ["derive"] } 
csv = "1.3.0"
